# scraper-amiami

./: .env.default  .gitignore  README.md  pyproject.toml
core/: config.py  main.py
core/scrapers/: amiami.py  browser_client.py
scripts/: build-standalone-html.py  common.ps1  discover-amiami-options.py  export-standalone-latest.ps1  run-discover-options.ps1  run-enrich-latest.ps1  run-scraper.ps1  run-web.ps1  setup.ps1
user_scripts/: export-standalone-latest.bat  run-enrich-latest.bat  run-scraper.bat  run-web.bat  setup.bat
web/: index.html  script.js  styles.css
