[project]
name = "scraper-amiami"
version = "0.1.0"
description = "AmiAmi scraper"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "cffi>=1.15.1",
    "curl-cffi>=0.13.0",
    "playwright>=1.54.0",
    "pycparser>=2.21",
    "pydantic>=2.10.6",
]

[tool.uv]
package = false
